--- a/package.json
+++ b/package.json
@@ -32,9 +32,9 @@
     "@angular/material-moment-adapter": "^20.2.7",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
-    "@cloudinary/angular": "^1.0.0-beta.14",
     "@cloudinary/url-gen": "^1.22.0",
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "cloudinary": "^2.8.0",
     "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
     "ng-angular-popup": "^2.0.1",
